# OOP

17_zad/: main.cpp
2_zad/: CMakeLists.txt  main.cpp
4_zad/: main.cpp
project/: CMakeLists.txt  go.sh  main.cpp
project/lib/: CMakeLists.txt  cell.cpp  cell.h  draw_game.cpp  draw_game.h  draw_text.h  event.h  event_change_field.cpp  event_change_field.h  event_change_xp.cpp  event_change_xp.h  event_jump.cpp  event_jump.h  field.cpp  field.h  field_render.h  file_manager.cpp  file_manager.h  game.cpp  game.h  game_pause.cpp  game_pause.h  generate_level.cpp  generate_level.h  keyboard.cpp  lib_game.h  logger.cpp  logger.h  main_menu.h  manage.cpp  manage.h  observable.h  observer.h  options_menu.h  player.cpp  player.h  reader.h  sfml_change_key_menu.h  sfml_config_scheme.h  sfml_field_render.h  (+7 more)
project/lib/Field/: cell.h  field.cpp  field.h
project/lib/Field/Event/: event_change_field.h  event_change_xp.h  event_jump.h  generate_event.cpp  generate_event.h
project/lib/File_manager/: file_manager.cpp  file_manager.h
project/lib/Menu/: change_key_menu.h  main_menu.cpp  main_menu.h  menu.h  options_keyboard_menu.cpp  options_keyboard_menu.h  options_logger_menu.cpp  options_logger_menu.h  sfml_change_key_menu.cpp  sfml_change_key_menu.h
project/lib/Message/: message.cpp  message.h  message_keyboard_push.cpp  message_keyboard_push.h  message_lose.cpp  message_lose.h  message_new_game.cpp  message_new_game.h  message_win.cpp  message_win.h
project/lib/Object/: game_object.h
project/lib/Object/Field/: cell.cpp  cell.h  field.cpp  field.h
project/lib/Object/Field/Event/: event.h  event_change_field.cpp  event_change_field.h  event_change_xp.cpp  event_change_xp.h  event_jump.cpp  event_jump.h  generate_event.cpp  generate_event.h
project/lib/Object/GroupEnemy/: group_enemy.h
project/lib/Object/GroupEnemy/Enemy/: enemy.h
project/lib/Object/GroupEnemy/Enemy/Scheme/: scheme_attack_player.cpp  scheme_attack_player.h  scheme_move.cpp  scheme_move.h  scheme_move_wall.cpp  scheme_move_wall.h  scheme_push_player.cpp  scheme_push_player.h
project/lib/Object/Player/: manage.cpp  manage.h  player.cpp  player.h
project/lib/Player/: manage.cpp  manage.h  player.cpp
project/lib/Reader/: keyboard.cpp  keyboard.h  reader.h  sfml_config_scheme.cpp  sfml_config_scheme.h  sfml_reader.cpp  sfml_reader.h
project/lib/Stream/: stream.h  stream_cout.cpp  stream_cout.h  stream_output_file.cpp  stream_output_file.h
